<resources>
    <string name="app_name">PhilamLife</string>
    <string name="tittle">Welcome to Philam Life</string>
    <string name="phone_email">\tHow would you like to be contacted?</string>
    <string name="am_pm">\tWhen would you like to be contact?</string>
    <string name="required">\t All fields are required, please dont leave any field blank.</string>
    <string name="pass_var">\ I agree that all data above are correct </string>
    <string name="varified">I authorized Philam life and its representatives to get in touch with me about their products and services.</string>
    <string name="API_key">AIzaSyBZwMHN95o72R5355U-vL7WyhbjlRT-NJ8</string>
    <string name="directionsApiKey">AIzaSyBZwMHN95o72R5355U-vL7WyhbjlRT-NJ8</string>
    <string name="access_token">pk.eyJ1IjoiZXJ5bGdvIiwiYSI6ImNrMHM5YjVhaTAwYTAzY3Byb2xnb2QzNWsifQ.egNisBArBccooR5MJ-Myww</string>
    <string name="fb_login_protocol_scheme">fb317416692263819</string>
    <string name="facebook_app_id">2267677980002816</string>
    <string name="future_tittle">WHAT THIS PRODUCT IS ABOUT ?</string>
    <string name="future">\t Retirement is a time to enjoy all the things you never had time to do. It is the phase of your life when you just want to sit back, relax and live without worries.
Philam Life’s Future Protect can take care of your future needs. It’s a plan for you when you grow old, or for your loved ones to remember you by should the unexpected happen.
Future Protect is available at a minimum premium of PHP 20,000 a year.</string>
    <string name="assure">\t Guarantees make you worry less about achieving your life goals, whether for yourself or your loved ones.
    And this plan gives you exactly that: guaranteed returns better than what the bank offers, guaranteed life insurance to secure the future of your loved ones, and guaranteed plan issuance to ease your worries.</string>
    <string name="money_tree">\t At this point in your life, you have already made your mark and built your wealth after many years of hard work.
You are looking to maximize your wealth’s growth potential so you and your family can continue to enjoy the good life now and in the future.
With Philam Life’s Money Tree Elite can help you plan for this. It is a one-pay investment and life insurance plan that lets you maximize your money’s growth potential. It has no entry fee so you can make the most out of your wealth. Plus, you get guaranteed life insurance coverage of at least 125% of your investment.
Money Tree Elite is available at a minimum one-time payment of PHP 1 Million.</string>
    <string name="future_protection"> \t Retirement is a time to enjoy all the things you never had time to do. It is the phase of your life when you just want to sit back, relax and live without worries.
Philam Life’s Future Protect can take care of your future needs. It’s a plan for you when you grow old, or for your loved ones to remember you by should the unexpected happen.
Future Protect is available at a minimum premium of PHP 20,000 a year.</string>
    <string name="active_money_works">\t You work hard to save for your dreams. You want to live healthy so you can enjoy your life now and in the future. You don’t want anything to prevent you from enjoying your hard-earned savings.
Now, you can have a plan that lets you live a rewarding lifestyle with Active MoneyWorks.</string>
    <string name="money_tree2">\t You want to grow your money faster so you can reach your goals sooner. But your money in the bank may not be earning its full potential.
With Money Tree, we can help you maximize your money’s growth potential so you can achieve your goals faster.
Money Tree is available at a minimum one-time payment of PHP 125,000.</string>
    <string name="future_scholar">\t We all want our children to have a bright future. We work hard so we can equip them with the best education. However, our hard earned savings are not growing as much as we want them to.
Get a head start in building your child’s education fund no matter what happens to you with Philam Life’s MoneyWorks for Education. It is a unit-linked savings plan where benefits are connected to the performance of your chosen investment funds, allowing you to grow your money better over time. Plus, you also get lifetime insurance coverage to protect you if the unexpected happens.
MoneyWorks for Education is available at a minimum premium of PHP 20,000 a year.</string>
    <string name="moneywork_for_educ">\t We all want our children to have a bright future. We work hard so we can equip them with the best education. However, our hard earned savings are not growing as much as we want them to.
Get a head start in building your child’s education fund no matter what happens to you with Philam Life’s MoneyWorks for Education. It is a unit-linked savings plan where benefits are connected to the performance of your chosen investment funds, allowing you to grow your money better over time. Plus, you also get lifetime insurance coverage to protect you if the unexpected happens.
MoneyWorks for Education is available at a minimum premium of PHP 20,000 a year.</string>
    <string name="aia_all_in_one">\t What if we tell you that you can go even further in protecting your dreams and family? With AIA All-In-One, get protected against 4 major risks in life: untimely death, accidents, disability, and critical illnesses. That way, you can conveniently secure your future and live worry-free with your family.
Your benefits are not affected by market risks, so you can get full protection when the need arises.</string>
    <string name="aia_critical_protect">\t In order to give your family the utmost protection for them and their future, you need a plan that protects you too. Stay one step ahead with AIA Critical Protect 100 -- a plan that protects you against 100 critical illnesses, from age 0 to 100. Further secure and protect your future and improve your coverage by adding a Gender-Specific Cancer rider and a Recovery Benefit rider.
Because your benefits are not affected by market risks, rest assured that you get full protection when you need it.</string>
    <string name="active_joint_critical_protec">\t Won’t it be great to be able to care for a loved one’s health at the same time as you care for your own? May it be your parents, your siblings, or your children, you want to live better with them. So Stay One Step Ahead with Active Joint Critical Protect, a joint life plan that covers the both of you. Powered by Philam Vitality, it will help you live healthy so you won’t get sick, help you recover from sickness in case you do, and continue until your older years as long as you stay in good health.</string>
    <string name="active_health_invest_plus">\t Nothing is more important than family. That’s why staying healthy for your loved ones is important. Now, you can have a plan that lets you invest in your health and enjoy rewards for living a healthier lifestyle. That way, you can look forward to a happier, fuller life.</string>
    <string name="cancer_life_shield">\t Cancer is one of the major causes of death in the Philippines and can affect anyone at any age or health condition. Once it happens, you don t want treatment and medical expenses to overpower you.
Be prepared with Philam Life is Cancer Life Shield. It is an annually renewable health insurance plan which gives you coverage for expenses incurred due to cancer. You can also customize it further to suit your health needs.
Cancer Life Shield is available at a minimum premium of PHP 2,000 a year.</string>
    <string name="health_100">\t While healthcare costs continue to rise, most Filipinos say that they are not yet financially ready to carry the burden of hospitalization. When HMO benefits are not enough to cover hospital expenses, they are pushed to use their personal savings.
Health 100 protects you and your loved ones from the expenses and loss of income when you get sick. It provides comprehensive hospital benefits, including coverage for daily hospitalization.</string>
    <string name="active_family_provider">\t You want to be healthy and be around so you can provide what’s best for your family. For you, giving your best means that you are able to provide for them no matter what happens.
Now, you can have a protection and wellness plan that will help you live confidently and worry-free with Active Family Provider.</string>
    <string name="aia_critical_protect_100">\t In order to give your family the utmost protection for them and their future, you need a plan that protects you too. Stay one step ahead with AIA Critical Protect 100 -- a plan that protects you against 100 critical illnesses, from age 0 to 100. Further secure and protect your future and improve your coverage by adding a Gender-Specific Cancer rider and a Recovery Benefit rider.
Because your benefits are not affected by market risks, rest assured that you get full protection when you need it. </string>
    <string name="joint_critical_protection">\t Won’t it be great to be able to care for a loved one’s health at the same time as you care for your own? May it be your parents, your siblings, or your children, you want to live better with them. So Stay One Step Ahead with Active Joint Critical Protect, a joint life plan that covers the both of you. Powered by Philam Vitality, it will help you live healthy so you won’t get sick, help you recover from sickness in case you do, and continue until your older years as long as you stay in good health.</string>
    <string name="life_smart">\t Making choices can be hard especially when you have loved ones who depend on you. You try to be careful because the future is always uncertain. You want to make smart choices so things can go on as planned.
Life Smart gives you guaranteed life insurance coverage with accident and terminal illness benefits. At the end of your plan, you can get all your payments back plus a cash bonus.
Life Smart is available for a minimum premium of PHP 20,000 a year.</string>
    <string name="vanguard">\t You want protection for yourself and your loved ones as well as the freedom to choose the benefits to suit your needs and budget.
With the versatility of Philam Life’s Vanguard, you can enjoy a lifetime protection plan with benefits that are tailor-fit to your lifestyle, as well as all your special needs.</string>
    <string name="group_health_choice_plus">\t Taking care of your people goes beyond providing fair and attractive compensation. An employees financial security is complete only when salaries are supported by meaningful employee benefits such as insurance protection.
Philam Lifes Group Health Choice Plus is a packaged product that offers flexible benefits for small and medium businesses.</string>
    <string name="classic_corporate_personal_accident">\t Make sure your company’s greatest asset - your people – are protected from unforeseen incidents, be it at work, an event or in transit. Ensure their and their families’ financial future.
Philam Lifes Classic Corporate Personal Accident offers comprehensive and customizable accident protection for your business.</string>
    <string name="credit_life_prime">\t Ensure the stability and strength of your organization, be it big or small, while you help your borrowers meet their financial needs. Choose a flexible and hassle-free protection that will settle unpaid loans in case a borrower suddenly passes away.
Philam Lifes Credit Life Prime is a comprehensive and customizable credit life plan to protect your business and your borrowers.
 </string>
</resources>